--- a/mobile/src/components/image-gallery/layout-1/image-gallery-layout-1.html
+++ b/mobile/src/components/image-gallery/layout-1/image-gallery-layout-1.html
@@ -20,7 +20,7 @@
       <ion-col col-12 col-sm-3 col-md-6 col-lg-4 col-xl-3
         *ngFor="let group of data[selectedItem].sub_cat;let i = index;">
         <ion-card box-shadow (click)="onEvent('onClick', group, $event)">
-          <img
+          <img class="tileImage"
             [src]="(group.image == '') ? 'assets/images/background/placeholder.jpg' : 'http://myshop.guidersmap.com/uploads/category/'+group.image" />
           <ion-card-content>
             <h2 gallery-title text-capitalize>{{group.title}}</h2>
