--- a/mobile/src/pages/login/login.scss
+++ b/mobile/src/pages/login/login.scss
@@ -1,10 +1,13 @@
-page-login {}
+page-login {
 
-ion-toolbar {
-    text-align: center;
-    font-weight: bold;
+    ion-content {
+        background-image: url('../assets/back_image.jpg');
+        background-size: cover;
+    }
+
+.toolbar-background-md {
+    background-image: url('../assets/back_image.jpg');
 }
-
 [ion-title] {
     color: #FFF;
     font-size: 5em;
@@ -12,21 +15,30 @@ ion-toolbar {
     font-weight: bold;
     text-align: center;
 }
+ion-title {
+    
+    color: #FFF !important;
+}
+
+
+.toolbar-title-md {
+    padding: 0 12px;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #FFF !important;
+  }
+
+
+}
+
+ion-toolbar {
+    text-align: center;
+    font-weight: bold;
+}
+
 
 [header-title] {
     text-align: center;
 }
 
-.toolbar-background-md {
-    background-image: url('../assets/back_image.jpg');
-}
 
-ion-content {
-    background-image: url('../assets/back_image.jpg');
-    background-size: cover;
-}
-
-ion-title {
-    
-    color: #FFF !important;
-}
