--- a/mobile/src/components/full-screen-gallery/full-screen-gallery.html
+++ b/mobile/src/components/full-screen-gallery/full-screen-gallery.html
@@ -3,9 +3,7 @@
     <ion-slide *ngFor="let item of data;" style="border-radius:10px;width:100%;height:100%;" [ngStyle]="{'background-image':'url(' + item.url + ')'}"  (click)="onImageClick(myImage)" >
 
 
- <!--
-        <img [src]="item.url" #myImage style="width: 10%;"
+        <img [src]="item.url" #myImage style="display:none;"
             (click)="onImageClick(myImage)" /> 
-    -->
     </ion-slide>
 </ion-slides>
