changes for ui on cart page

--- a/mobile/src/pages/product-details/product-details.scss
+++ b/mobile/src/pages/product-details/product-details.scss
@@ -69,4 +69,35 @@ page-product-details {
   background-color: #2c1e2f;
 }
  
+
+
+.deletebutton{
+  
+  background:#2c1e2f !important;
+  color:#FFF;
+  border-radius:50px;
+  font-weight:bold;
+  padding:1em 2em;
+}
+
+
+
+
+
+
+.updatebutton{
+  
+  background:#f2b226 !important;
+  color:#2c1e2f;
+  border-radius:50px;
+  font-weight:bold;
+  padding:1em 2em;
+}
+
+
+
+
+
+
+
 }
