--- a/mobile/src/pages/product-details/product-details.scss
+++ b/mobile/src/pages/product-details/product-details.scss
@@ -1,4 +1,8 @@
 page-product-details {
+  .infoIcon{
+    float:right;
+    width:5em;
+  }
  
 /*  #Style Expandable - Filters Products
 ===========================================*/
