--- a/mobile/src/theme/main-theme.scss
+++ b/mobile/src/theme/main-theme.scss
@@ -507,6 +507,7 @@ $card-ios-margin-bottom: 0px !default;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   word-wrap: initial !important;
+  font-weight:bold;
 }
 
 [gallery-subtitle] {
