--- a/mobile/src/components/image-gallery/layout-1/image-gallery-layout-1.html
+++ b/mobile/src/components/image-gallery/layout-1/image-gallery-layout-1.html
@@ -13,17 +13,16 @@
 
   <!-- <ion-row no-padding> [style.backgroundImage]="'url(' + display_image + ')'" -->
   <ion-row no-padding>
-    <ion-col col-12 padding-top>
-      <!-- <h1 header-title no-padding no-margin>{{title}}</h1> -->
-    </ion-col>
     <div *ngIf="data[selectedItem].sub_cat">
       <ion-col col-12 col-sm-3 col-md-6 col-lg-4 col-xl-3
         *ngFor="let group of data[selectedItem].sub_cat;let i = index;">
         <ion-card box-shadow (click)="onEvent('onClick', group, $event)">
+          <ion-card-header>
           <img class="tileImage"
             [src]="(group.image == '') ? 'assets/images/background/placeholder.jpg' : 'http://lakud.com/uploads/category/'+group.image" />
+            </ion-card-header>
           <ion-card-content>
-            <h2 gallery-title text-capitalize>{{group.title}}</h2>
+            <label gallery-title text-capitalize>{{group.title}}</label>
             <!-- <p gallery-subtitle>{{group.items.length}} image(s)</p> -->
           </ion-card-content>
         </ion-card>
