--- a/mobile/src/pages/categorylist/categorylist.scss
+++ b/mobile/src/pages/categorylist/categorylist.scss
@@ -24,7 +24,7 @@ ion-avatar.imageCats img{
     border-radius:10px !important;
 }
 .subListClass{ 
-    display: none;
+    display: block;
     /*
     border-right:.5em solid #f2b226;
     border-left:.5em solid #f2b226; 
@@ -50,7 +50,44 @@ ion-avatar.imageCats img{
     max-height:250px;
     */
 }
+
+.hosrizScrol{
+    position: relative;
+    width:100%;
+    height:13.5em; 
+    overflow-x:scroll;
+    overflow-y: hidden;
+    margin-bottom:-1em;
+}
 .imgPr{
-    margin:.5em;
-    border:1px solid #CCC;
+    margin:.5em; 
+display:inline-flex;
+}
+
+.imageCats2{
+    border: 1px solid #2c1e2f !important; 
+    border-radius:10px;
+    height:10em !important;
+    width:7em !important;
+    text-align: center;
+    text-align: center;
+    background-position: center;
+    background-size: cover; 
+}
+.productDet{
+    height:2em;
+    background: #000;
+    opacity: .5; 
+    margin-top: 8em;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; 
+    color:#FFF;
+    padding:5px;
+}
+.text-rightSide{
+    text-align: right;
+    font-size:.7em;
+}
+.prodTitleEpl{
+    overflow:hidden;
 }
