changes with bug fixes

--- a/mobile/src/app/app.html
+++ b/mobile/src/app/app.html
@@ -6,7 +6,7 @@
     <ion-content transparent>
       <ion-item text-center padding transparent no-lines>
         <ion-avatar>
-          <img src="assets/images/background/green-bg.jpg" />
+          <img src="assets/images/noimage.png" id="profileImage" class="avatar" />
         </ion-avatar>
         <h3 margin-top ion-text text-wrap>{{params.title}}</h3>
       </ion-item>
