--- a/mobile/src/components/login/layout-2/login.html
+++ b/mobile/src/components/login/layout-2/login.html
@@ -32,7 +32,7 @@
       <ion-col no-padding col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6 text-center>
         <ion-item transparent text-center no-lines>
           <!---Logo Title-->
-          <img src='../../../assets/veneer_logo.jpg' class="logoImg" />
+          <img src='assets/veneer_logo.jpg' class="logoImg" />
         </ion-item>
         <form>
 
