--- a/mobile/src/components/list-view/expandable/layout-1/expandable.html
+++ b/mobile/src/components/list-view/expandable/layout-1/expandable.html
@@ -7,9 +7,13 @@
             <!-- List big image Header -->
             <div collapsible-header (click)="toggleGroup(group)">
               <ion-item item-divider>
-                <ion-avatar item-start>
-                  <img src="assets/images/background/green-bg.jpg" alt="title" />
-                </ion-avatar>
+
+                  <ion-avatar item-start class="imageCats">
+                      <img [src]="(group.displayImage == '') ? 'assets/images/background/placeholder.jpg' : group.displayImage[0]"
+                        alt="{{group.user_fullname}}" />
+                    </ion-avatar>
+
+ 
                 <h2 item-title>Order ID: {{group.sale_id}}</h2>
                 <h3 item-subtitle text-wrap>Total Quantity: {{group.quantity}}</h3>
 
@@ -32,7 +36,7 @@
             <!-- End List big image Header -->
             <!-- List big image Body -->
             <div item-accordion [ngClass]="{'active': isGroupShown(group) }" [hidden]="!isGroupShown(group)"
-              style="overflow: scroll;">
+              style="overflow: scroll; padding:1em;">
               <!-- <h2 subitem-subtitle>Category: {{group.category_title[0]}}</h2> -->
               <p style="color:white;font-size: 14px;margin:0px;"> Driver Details: </p>
               <div style="margin-left:20px" transparent no-lines *ngIf="group.driver_details.length>0">
@@ -46,12 +50,18 @@
               <div style="margin-left:20px" *ngIf="group.driver_details.length==0">
                 <p style="color:white">Not Allocated</p>
               </div>
-              <h1 subitem-subtitle>Product List :</h1>
+
+              <ion-card>
+
+                  <ion-card-header>Product List : </ion-card-header>
+                
+                  <ion-card-content>
+                    <!-- Add card content here! -->
               <ion-item style="margin:0px" transparent no-lines>
                 <ion-row>
-                  <h2 col-2 text-center style="color:white">PID</h2>
-                  <h2 col-5 text-center style="color:white">PName</h2>
-                  <h2 col-5 text-center style="color:white">PItems</h2>
+                  <h2 col-2 text-center >PID</h2>
+                  <h2 col-5 text-center >PName</h2>
+                  <h2 col-5 text-center  >PItems</h2>
                 </ion-row>
                 <!-- Title -->
                 <!-- <p subitem-subtitle text-wrap style="margin:0px !important" *ngFor="let item of group.product_list;"
@@ -59,11 +69,17 @@
 
                 <ion-row subitem-subtitle text-wrap style="margin:0px !important"
                   *ngFor="let item of group.product_list;let i = index">
-                  <p col-2 text-center style="color:white">{{group.pids[i]}}</p>
-                  <p col-5 text-center style="color:white">{{group.pTitles[i]}}</p>
-                  <p col-5 text-center style="color:white">{{item}}</p>
+                  <p col-2 text-center >{{group.pids[i]}}</p>
+                  <p col-5 text-center >{{group.pTitles[i]}}</p>
+                  <p col-5 text-center >{{item}}</p>
                 </ion-row>
               </ion-item>
+                  </ion-card-content>
+                
+                </ion-card>
+
+
+ 
               <!-- <button ion-button round block (click)="onEvent('onItemClick', group, $event)" *ngIf="1>=group.status"
                 style="background-color:darkred !important;width:200px;display:block;margin:auto;margin-bottom:10px">Cancel
                 Order</button> -->
