--- a/mobile/src/app/app.html
+++ b/mobile/src/app/app.html
@@ -3,12 +3,12 @@
   <!-- Menu Main Top -->
   <ion-menu menu [content]="content" *ngIf="params != null">
     <!-- Menu Main List -->
-    <ion-content transparent>
+    <ion-content transparent [ngInit]="getProfileData()">
       <ion-item text-center padding transparent no-lines>
         <ion-avatar>
           <img src="assets/images/noimage.png" id="profileImage" class="avatar" />
         </ion-avatar>
-        <h3 margin-top ion-text text-wrap>{{params.title}}</h3>
+        <h3 margin-top ion-text text-wrap>{{profileName}}</h3>
       </ion-item>
       <ion-list no-margin>
         <button transparent menuClose ion-item item-title no-lines item-divider *ngFor="let p of pages"
