--- a/mobile/src/components/list-view/expandable/layout-1/expandable-layout-1.scss
+++ b/mobile/src/components/list-view/expandable/layout-1/expandable-layout-1.scss
@@ -2,14 +2,17 @@
 ===========================================*/
 expandable-layout-1 {
   li {
-    list-style-type: none;
+    list-style-type: none; 
   }
 
   // List big image Body
   [item-accordion] {
+    margin-bottom:1em;
+    padding-bottom:1em;
+    border:1px solid #ccc;
+    display:none;
     @extend .gradient;
-    height: 0;
-    display: block !important;
+    height: 0; 
     -webkit-transition: all 300ms;
     transition: all 300ms;
     overflow: hidden;
@@ -19,7 +22,8 @@ expandable-layout-1 {
     }
 
     &.active {
-      height: 160px !important;
+      height: auto !important;
+      display:block;
     }
 
     [icon-small], [span-medium] {
