--- a/mobile/src/pages/cart-details/cart-details.scss
+++ b/mobile/src/pages/cart-details/cart-details.scss
@@ -69,3 +69,25 @@ display:table-row;
         color: #FFF;
         padding: 5px;
         }
+        
+.deletebutton{
+  
+    background:#2c1e2f !important;
+    color:#FFF; 
+    font-weight:bold;
+    padding:1em 2em;
+  }
+  
+  
+  
+  
+  
+  
+  .updatebutton{
+    
+    background:#f2b226 !important;
+    color:#2c1e2f; 
+    font-weight:bold;
+    padding:1em 2em;
+  }
+  
