build with notification on foreground

--- a/mobile/src/pages/pages-settings/pages-settings.scss
+++ b/mobile/src/pages/pages-settings/pages-settings.scss
@@ -17,4 +17,12 @@ page-pages-settings {
   padding:1em 2em;
 }
 
+.hrefLink{
+  text-decoration: none !important;
+  color:#000;
+}
+.list-md .item-block .item-inner{
+  border:none !important;
+  border-bottom:none !important;
+}
 }
